--- a/tesisTomba/templates/funcion/sin_lugares.html
+++ b/tesisTomba/templates/funcion/sin_lugares.html
@@ -1,3 +1,69 @@
-{% block content %}
-  <h1>No hay lugares disponibles en el centro comercial</h1>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>CENTRO COMERCIAL</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #154360;
+            }
+            .header {
+                width: 100%;
+                background-color: #154360;
+                color: white;
+                padding: 5px;
+                box-sizing: border-box;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
+            .qr-image {
+                max-width: 300px;
+                height: auto;
+            }
+            .info-container {
+                background-color: white;
+                padding: 20px;
+                border-radius: 5px;
+                margin-bottom: 20px;
+              }
+              
+              .info-wrapper {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+              }
+              .info-wrapper h2,
+            .info-wrapper button {
+            color: #276e90;
+            text-align: center;
+            }
+            .button {
+                display: inline-block;
+                padding: 10px 20px;
+                background-color: #276e90;
+                color: #fff;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+              }
+        </style>
+       
+    </head>
+    <body>
+        <div class="header">
+            <h1> {{cc}}</h1>
+        </div>
+        <div class="info-container">
+        <div class="info-wrapper">
+        {% block content %}
+          <h2>NO HAY LUGARES DISPONIBLES</h2>
+        {% endblock %}
+        {% comment %} <p>Codigo QR para poder salir:</p>
+        <img class="qr-image" src="{{ imagen }}" > {% endcomment %}
+
+          </div>
+        </div>
+  </body>
+  </html>
