--- a/tesisTomba/templates/modelo/navbar.html
+++ b/tesisTomba/templates/modelo/navbar.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         .navbar {
-            background-color: #0A3143;
+            background-color: #154360;
             color: #fff;
             padding: 10px;
             display: flex;
